--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.4.6",
+    "axios": "^1.4.0",
     "dayjs": "^1.11.7",
     "i18next": "^22.4.15",
     "react": "^18.2.0",
