--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# REACT_APP_MAIN_URL = https://nihol.abduvoitov.com/api
-REACT_APP_MAIN_URL = https://nutty-twill-mite.cyclic.app/api
+REACT_APP_MAIN_URL = https://nihol.abduvoitov.com/api
+# REACT_APP_MAIN_URL = https://nutty-twill-mite.cyclic.app/api
